package-examples/ghost/mariadb/networkpolicy-example-mariadb-ingress.yaml
# Source: ghost/charts/mariadb/templates/primary/networkpolicy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: example-mariadb-ingress
spec:
  ingress:
